# glespainting

./: .gitignore
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/haowan/opengl_new/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AppDelegate.cpp  AppDelegate.h  CMakeLists.txt  Caretaker.h  Java_org_cocos2dx_lib_Cocos2dxBitmap.cpp  Java_org_cocos2dx_lib_Cocos2dxHelper.cpp  JniHelper.cpp  JniHelper.h  LayerManager.cpp  LayerManager.h  RendererES2.cpp  VisibleRect.cpp  VisibleRect.h  coclog.h  cocos2d.h  drawtest.cpp  gles3jni.cpp  gles3jni.h  mylog.h
app/src/main/cpp/2d/: CCAction.cpp  CCAction.h  CCActionCamera.cpp  CCActionCamera.h  CCActionCatmullRom.cpp  CCActionCatmullRom.h  CCActionGrid.cpp  CCActionGrid.h  CCActionGrid3D.cpp  CCActionGrid3D.h  CCActionInstant.cpp  CCActionInstant.h  CCActionInterval.cpp  CCActionInterval.h  CCActionPageTurn3D.cpp  CCActionTiledGrid.cpp  CCActionTiledGrid.h  CCAtlasNode.cpp  CCAtlasNode.h  CCAutoPolygon.cpp  CCAutoPolygon.h  CCCamera.cpp  CCCamera.h  CCCameraBackgroundBrush.cpp  CCClippingNode.cpp  CCClippingNode.h  CCClippingRectangleNode.cpp  CCClippingRectangleNode.h  CCComponent.h  CCDrawLayer.cpp  CCDrawLayer.h  CCDrawNode.cpp  CCDrawNode.h  CCDrawingPrimitives.cpp  CCDrawingPrimitives.h  CCFastTMXLayer.cpp  CCFastTMXLayer.h  CCFontAtlas.cpp  CCFontAtlasCache.cpp  CCFontAtlasCache.h  (+66 more)
app/src/main/cpp/2d/libcocos2d_win10/: libcocos2d.vcxproj  libcocos2d.vcxproj.filters
app/src/main/cpp/3d/: CCAABB.cpp  CCAABB.h  CCAnimate3D.cpp  CCAttachNode.cpp  CCAttachNode.h  CCBillBoard.cpp  CCBillBoard.h  CCBundle3D.cpp  CCBundle3D.h  CCBundle3DData.h  CCFrustum.cpp  CCMesh.cpp  CCMesh.h  CCMeshSkin.cpp  CCMeshSkin.h  CCMotionStreak3D.cpp  CCMotionStreak3D.h  CCOBB.cpp  CCOBB.h  CCPlane.cpp  CCPlane.h  CCRay.cpp  CCRay.h  CCSkeleton3D.cpp  CCSkeleton3D.h  CCSkybox.cpp  CCSkybox.h  CCSprite3D.cpp  CCSprite3D.h  CCTerrain.cpp  CCTerrain.h
app/src/main/cpp/base/: CCConsole.cpp  CCController-android.cpp  CCDirector.cpp  CCDirector.h  CCEventDispatcher.cpp  CCEventMouse.cpp  CCEventMouse.h  CCNS.cpp  CCNS.h  CCNinePatchImageParser.cpp  CCNinePatchImageParser.h  CCProperties.cpp  CCProperties.h  CCRef.cpp  CCRef.h  CCScheduler.cpp  CCStencilStateManager.cpp  CCTouch.cpp  CCTouch.h  CCUserDefault-android.cpp  ccConfig.h  ccMacros.h  ccTypes.h  ccUTF8.h
app/src/main/cpp/deprecated/: CCDeprecated.cpp  CCDeprecated.h
app/src/main/cpp/draw/: Caretaker.cpp  Caretaker.h  LayerManager.cpp  LayerManager.h  color.cpp  color.h  curve.cpp  curve.h  gles3jni.cpp  gles3jni.h  glsl.h  layer.cpp  layer.h  main.cpp  mat4.cpp  mat4.h  myjni.cpp  painter.h  renderer.cpp  renderer.h  state.cpp  state.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
app/src/main/cpp/math/: CCAffineTransform.cpp  CCAffineTransform.h  CCGeometry.cpp  CCGeometry.h  CCMath.h  CCVertex.cpp  CCVertex.h  CMakeLists.txt  CocMat4.cpp  CocMat4.h  CocMat4.inl  CocVec2.cpp  CocVec2.h  CocVec2.inl  CocVec3.cpp  CocVec3.h  CocVec3.inl  CocVec4.cpp  CocVec4.h  CocVec4.inl  MathUtil.h  Quaternion.cpp  Quaternion.h  Quaternion.inl
app/src/main/cpp/platform/: CCApplicationProtocol.h  CCGLView.cpp  CCGLView.h  CCImage.cpp
app/src/main/cpp/platform/android/: CCApplication-android.cpp  CCCommon-android.cpp  CCDevice-android.cpp  CCEnhanceAPI-android.cpp  CCEnhanceAPI-android.h  CCFileUtils-android.cpp  CCGLViewImpl-android.cpp
app/src/main/cpp/platform/desktop/: CCGLViewImpl-desktop.cpp
app/src/main/cpp/platform/ios/: CCGLViewImpl-ios.mm
app/src/main/cpp/renderer/: CCBatchCommand.cpp  CCBatchCommand.h  CCCustomCommand.cpp  CCCustomCommand.h  CCFrameBuffer.h  CCGLProgram.cpp  CCGLProgram.h  CCGLProgramState.cpp  CCGLProgramState.h  CCGLProgramStateCache.h  CCGroupCommand.h  CCMaterial.cpp  CCMaterial.h  CCMeshCommand.cpp  CCMeshCommand.h  CCPass.cpp  CCPass.h  CCPrimitiveCommand.cpp  CCPrimitiveCommand.h  CCQuadCommand.cpp  CCQuadCommand.h  CCRenderCommand.cpp  CCRenderCommand.h  CCRenderState.h  CCRenderer.cpp  CCRenderer.h  CCTechnique.h  CCTexture2D.cpp  CCTexture2D.h  CCTrianglesCommand.cpp  CCTrianglesCommand.h
app/src/main/java/com/gles/painting/: App.java  GLESSurfaceView.java  JNILib.java  MainActivity.java  MyApp.java  MyConfigChooser.java  MyRenderer.java  NewOpenglWriter.java  RenderLib.java
app/src/main/java/com/gles/painting/Constants/: Constants.java
app/src/main/java/com/gles/painting/adapter/: ColorAdapter.java  LayerAdapter.java  MyBaseAdapter.java  SizeAlphaAdapter.java
app/src/main/java/com/gles/painting/bean/: DrawBean.java  DrawLayer.java  Point.java
app/src/main/java/com/haowan/openglnew/: App.java  ArithmeticUtil.java  Constants.java  DrawBean.java  GLESSurfaceView.java  JNILib.java  MainActivity.java  MyConfigChooser.java  MyRenderer.java  MyToast.java  NewOpenglWriter.java  NoScrollGridView.java  NoteWriteActivity2.java  Point.java  RenderLib.java
app/src/main/java/org/cocos2dx/lib/: Cocos2dxHelper.java
app/src/main/res/drawable/: base_commit_selector.xml  base_save_selector.xml  base_share_selector.xml  icon_tab_press_bg.xml  mood_essays_bitmap.xml  paint_fun_delete_selector.xml  player_seekbar_style.xml  shape_bg_f5f5f5_r4.xml  shape_layer_item_bg.xml  shape_paint_bottom_bg.xml  shape_paint_left_bottom_part_bg.xml  shape_paint_left_top_part_bg.xml  shape_paint_right_part_bg.xml  shape_paint_tool_bg.xml  shape_scroll_bar_blac.xml
app/src/main/res/layout/: activity_main.xml  change_color_t.xml  color_pop_layout.xml  dialog_color_picker.xml  get_color_pop.xml  huaba_func_item.xml  layer_item_layout.xml  layer_list_layout.xml  layer_mode_item.xml  layer_mode_layout.xml  layer_setting_layout.xml  note_for_write1.xml  note_for_write2.xml  note_for_write_new.xml  paint_bar.xml  recover.xml  setpaint_dialog.xml  size_alpha_item.xml
app/src/main/res/values/: attrs.xml  colors.xml  new_colors.xml  new_dimens.xml  strings.xml  styles.xml
app/src/test/java/com/haowan/opengl_new/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+44 files in other folders)
